tests/should_fail/type_option_not_unwrapped.nv
module type_call_with_option_not_unwrapped

import super.std.core

// Passing Option(Int) where Int is expected — not unwrapped
fn double(x: Int) -> Int {
    return x * 2
}

let opt = Some(21)
double(opt)
